// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Invalid configuration will error when currentPage is greater than totalPages 1`] = `
"Invalid configuration:
— currentPage must be not be greater than totalPages"
`;

exports[`Pagination Invalid configuration will error when currentPage is less than 1 1`] = `
"Invalid configuration:
— currentPage must have a value greater than 0"
`;

exports[`Pagination Invalid configuration will error when less than 1 max pages 1`] = `
"Invalid configuration:
— totalPages must have a value greater than 0
— currentPage must have a value greater than 0"
`;
